# wasmer-bench

./: Cargo.toml
benches/: memory_access.rs
