[package]
name = "wasmer-bench"
version = "0.1.0"
authors = ["Ruslan Prakapchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "1.0.0-beta2"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "memory_access"
harness = false
